@@ -33,14 +33,10 @@ tests:
       - test.configuration.BeforeClassThreadTest
       - test.configuration.BeforeTestOrderingTest
       - test.configuration.ConfigurationTest
-      - test.configuration.ExternalConfigurationClass
       - test.configuration.GroupsTest
-      - test.configuration.MethodCallOrderTest
       - test.configuration.MultipleBeforeGroupTest
       - test.configuration.ReflectMethodParametrizedConfigurationMethodTest
       - test.configuration.SuiteFactoryOnceTest
-      - test.configuration.SuiteTest
-      - test.configuration.VerifySuiteTest
       - test.privatemethod.PrivateMethodTest$PrivateMethodInnerTest
       - test.multiple.TestMultiple
       - test.ClassConfigurations
